--- a/header.html
+++ b/header.html
@@ -8,9 +8,10 @@
 </head>
 <body class="fondo_header">
   <p>
-    <a href="profesional.html">Profesional</a>
-    <a href="personal.html">Sobre Mi</a>
-    <a href="contact.html">Contact Me</a>
+    <a href=""><img class="imagen" src="img/borrar.jpg" alt="si"></a>
+    <a class="boton" href="profesional.html">Profesional</a>
+    <a class="boton" href="personal.html">Sobre Mi</a>
+    <a class="boton" href="contact.html">Contact Me</a>
   </p>
 </body>
 </html>
