--- a/personal.html
+++ b/personal.html
@@ -23,6 +23,16 @@
       <li>Salir</li>
       <p>mola</p>
     </ul>
+    <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
+    <ul class="yt">
+      <li><a href="https://www.youtube.com/">YouTube</a></li>
+    </ul>
+    <p>Utilizo esta aplicacion a diario tanto por propositos de ocio como educativos. Su pagina web utiliza HTML 5 y CSS junto a herramientas de JavaScript</p>
+  </fieldset>
+  <fieldset>
+    <legend>Contact Me</legend>
+    <p>Email: marcosmananesruiz@gmail.com</p>
+    <p>Teléfono: +34 678 09 76 12</p>
   </fieldset>
 </body>
 </html>
