--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilos.css">
   <title>Proyecto</title>
+  <link rel="stylesheet" href="css/estilosIndex.css">
 </head>
 <body>
-
+  <iframe src="header.html" frameborder="0" height="50px" width="100%" id="header"></iframe>
+  <iframe src="" frameborder="0" height="100%" width="100%" id="center"></iframe>
 </body>
 </html>
