--- a/index.html
+++ b/index.html
@@ -3,12 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proyecto Marcos Mañanes 2ºSMRC AW - Pagina Principal</title>
   <link rel="stylesheet" href="css/estilos.css">
-  <title>Proyecto</title>
-  <link rel="stylesheet" href="css/estilosIndex.css">
 </head>
 <body>
-  <iframe src="header.html" frameborder="0" height="50px" width="100%" id="header"></iframe>
-  <iframe src="" frameborder="0" height="100%" width="100%" id="center"></iframe>
+  <header>
+    <nav>
+      <p>
+        <a class="selected" href="index.html">Pagina Principal</a>
+        <a class="boton" href="curriculum.html" target="center">Curriculum</a>
+        <a class="boton" href="personal.html" target="center">Sobre Mi</a>
+        <a class="boton" href="formulario.html" target="center">Formulario</a>
+      </p>
+    </nav>
+  </header>
+  <main>
+    <fieldset>
+      <h1>
+        Pagina del Proyecto
+      </h1>
+      <h3>
+        <p>
+          En este pagina se mostrara todo sobre el Proyecto
+        </p>
+      </h3>
+    </fieldset> 
+  </main>
+  <footer>
+      <p>
+        Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+      </p>
+  </footer>
 </body>
 </html>
