--- a/personal.html
+++ b/personal.html
@@ -3,36 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proyecto Personal</title>
-  <link rel="stylesheet" href="css/estilosPersonal.css">
+  <title>Proyecto Marcos Mañanes 2ºSMRC AW - Personal</title>
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-  <h1>SOBRE MI</h1>
-  <fieldset>
-    <legend>¿Quien Soy?</legend>
-    <img src="img/borrar.jpg" alt="mifoto" height="256" width="256">
-    <p>Marcos Mañanes Ruiz - 18 años (13-07-2005)</p>
-    <p>Programador (Java, C#, Python, VBA)</p>
-    <p>Gatos Enjoyer</p>
-    <p class="subtitulo">3 CARACTERISTICAS SOBRE MI</p>
-    <p>aqui iran las 3 columnas con todo</p>
-    <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
-    <ul>
-      <li>Videojuegos</li>
-      <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta. No solo jugarlos sino tambien programarlos. Desatar la creatividad</p>
-      <li>Salir</li>
-      <p>mola</p>
-    </ul>
-    <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
-    <ul class="yt">
-      <li><a href="https://www.youtube.com/">YouTube</a></li>
-    </ul>
-    <p>Utilizo esta aplicacion a diario tanto por propositos de ocio como educativos. Su pagina web utiliza HTML 5 y CSS junto a herramientas de JavaScript</p>
-  </fieldset>
-  <fieldset>
-    <legend>Contact Me</legend>
-    <p>Email: marcosmananesruiz@gmail.com</p>
-    <p>Teléfono: +34 678 09 76 12</p>
-  </fieldset>
+  <header>
+    <nav>
+      <p>
+        <a class="boton" href="index.html">Pagina Principal</a>
+        <a class="boton" href="curriculum.html">Curriculum</a>
+        <a class="selected" href="personal.html">Sobre Mi</a>
+        <a class="boton" href="formulario.html">Formulario</a>
+      </p>
+    </nav>
+  </header>
+  <main class="personal">
+    <div class="centrarTitulo">
+      <h1 class="tituloPersonal">SOBRE MÍ</h1>
+    </div>
+    <fieldset>
+      <legend>¿Quien Soy?</legend>
+      <img src="img/borrar.jpg" alt="mifoto" height="256" width="256">
+      <p>Marcos Mañanes Ruiz - 18 años (13-07-2005)</p>
+      <p>Programador (Java, C#, Python, VBA excepto en Access)</p>
+      <p>Gatos Enjoyer</p>
+      <p class="subtitulo">3 CARACTERISTICAS SOBRE MI</p>
+      <p>aqui iran las 3 columnas con todo</p>
+      <p>
+        
+      </p>
+      <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
+      <ul>
+        <li>Videojuegos</li>
+        <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta. No solo jugarlos sino tambien programarlos. Desatar la creatividad</p>
+        <li>Salir</li>
+        <p>mola</p>
+      </ul>
+      <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
+      <ul class="yt">
+        <li><a href="https://www.youtube.com/">YouTube</a></li>
+      </ul>
+      <p>Utilizo esta aplicacion a diario tanto por propositos de ocio como educativos. Su pagina web utiliza HTML 5 y CSS junto a herramientas de JavaScript</p>
+    </fieldset>
+    <fieldset>
+      <legend>Contact Me</legend>
+      <p>Email: marcosmananesruiz@gmail.com</p>
+      <p>Teléfono: +34 678 09 76 12</p>
+    </fieldset>
+  </main>
+  <footer>
+    <p>
+      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+    </p>
+</footer>
 </body>
 </html>
