--- a/curriculum.html
+++ b/curriculum.html
@@ -61,5 +61,10 @@
       </table>
     </fieldset>  
   </main>
+  <footer>
+    <p>
+      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+    </p>
+  </footer>
 </body>
 </html>
