--- a/personal.html
+++ b/personal.html
@@ -17,10 +17,16 @@
       </p>
     </nav>
   </header>
-  <main class="personal">
+  <aside class="personal">
+    <fieldset>
+      <legend>asdf</legend>
+      asdfa
+    </fieldset>
     <div class="centrarTitulo">
       <h1 class="tituloPersonal">SOBRE MÍ</h1>
     </div>
+  </aside>
+  <main class="personal">
     <fieldset>
       <legend>¿Quien Soy?</legend>
       <img src="img/borrar.jpg" alt="mifoto" height="256" width="256">
@@ -28,16 +34,32 @@
       <p>Programador (Java, C#, Python, VBA excepto en Access)</p>
       <p>Gatos Enjoyer</p>
       <p class="subtitulo">3 CARACTERISTICAS SOBRE MI</p>
-      <p>aqui iran las 3 columnas con todo</p>
-      <p>
-        
-      </p>
+      <div class="gustos">
+        <div class="gusto1">
+          <p><span class="bold">Simpatico</span></p>
+          <p>
+            Siempre intento ser los mas educado y agradable con la gente. 
+          </p>
+        </div>
+        <div class="gusto2">
+          <p><span class="bold">Introvertido</span></p>
+          <p>
+            Cada vez menos, pero no me suelto facil con gente que apenas conozco
+          </p>
+        </div>
+        <div class="gusto3">
+          <p><span class="bold">Determinado</span></p>
+          <p>
+            Pocas veces abandono las cosas, puedi dejarlas un tiempo pero siempre las terminaré y mejor de como las planeé inicialmente
+          </p>
+        </div>
+      </div>
       <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
       <ul>
-        <li>Videojuegos</li>
-        <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta. No solo jugarlos sino tambien programarlos. Desatar la creatividad</p>
-        <li>Salir</li>
-        <p>mola</p>
+        <li class="cositas">Videojuegos</li>
+        <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta.</p>
+        <li class="cositas">Coding</li>
+        <p>Aprendi las cosas basicas de la programacion hace un par de años, ahora solo hao cosas por pura diversion, en juegos o alguna herramienta que se me ocurra</p>
       </ul>
       <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
       <ul class="yt">
@@ -45,16 +67,11 @@
       </ul>
       <p>Utilizo esta aplicacion a diario tanto por propositos de ocio como educativos. Su pagina web utiliza HTML 5 y CSS junto a herramientas de JavaScript</p>
     </fieldset>
-    <fieldset>
-      <legend>Contact Me</legend>
-      <p>Email: marcosmananesruiz@gmail.com</p>
-      <p>Teléfono: +34 678 09 76 12</p>
-    </fieldset>
   </main>
   <footer>
     <p>
       Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
     </p>
-</footer>
+  </footer>
 </body>
 </html>
