Pagina sobre proyecto

--- a/index.html
+++ b/index.html
@@ -11,28 +11,83 @@
     <nav>
       <p>
         <a class="selected" href="index.html">Pagina Principal</a>
-        <a class="boton" href="curriculum.html" target="center">Curriculum</a>
-        <a class="boton" href="personal.html" target="center">Sobre Mi</a>
-        <a class="boton" href="formulario.html" target="center">Formulario</a>
+        <a class="boton" href="curriculum.html">Curriculum</a>
+        <a class="boton" href="formulario.html">Formulario</a>
+        <a class="boton" href="pagina.html">Sobre el Proyecto</a>
       </p>
     </nav>
   </header>
-  <main>
+  <aside class="personal">
+    <div class="container">
+      <fieldset class="redes">
+        <legend class="center">Redes Sociales</legend>
+        <p>¡Puedes seguirme en mis redes sociales!</p>
+        <a href="https://twitter.com/?lang=es" class="redes">
+          <p><img src="/img/twitter.jpeg" alt="logoTwitter" height="40" width="40"></p>
+          Twitter - X
+        </a>
+        <a href="https://www.instagram.com" class="redes">
+          <p><img src="/img/intra.png" alt="logoInstagram" height="40" width="40"></p>
+          Instagram       
+        </a>
+        <a href="https://www.instagram.com" class="redes">
+          <p><img src="/img/github.png" alt="logoGitHub" height="40" width="40"></p>
+          GitHub
+        </a>
+        <a href="https://www.reddit.com/?rdt=45778" class="redes">
+          <p><img src="/img/reddit.png" alt="logoReddit" height="40" width="40"></p>
+          Reddit
+        </a>
+      </fieldset>
+    </div>
+  </aside>
+  <main class="personal">
     <fieldset>
-      <h1>
-        Pagina del Proyecto
-      </h1>
-      <h3>
-        <p>
-          En este pagina se mostrara todo sobre el Proyecto
-        </p>
-      </h3>
-    </fieldset> 
+      <legend>BIENVENIDO A MI PAGINA WEB</legend>
+      <img src="img/borrar.jpg" alt="mifoto" height="256" width="256">
+      <p class="subtitulo">¿QUIEN SOY?</p>
+      <p>Marcos Mañanes Ruiz - 18 años (13-07-2005)</p>
+      <p>Programador (Java, C#, Python, VBA excepto en Access)</p>
+      <p>Gatos Enjoyer</p>
+      <p class="subtitulo">3 CARACTERISTICAS SOBRE MI</p>
+      <div class="gustos">
+        <div class="gusto1">
+          <p><span class="bold">Simpatico</span></p>
+          <p>
+            Siempre intento ser los mas educado y agradable con la gente. 
+          </p>
+        </div>
+        <div class="gusto2">
+          <p><span class="bold">Introvertido</span></p>
+          <p>
+            Cada vez menos, pero no me suelto facil con gente que apenas conozco
+          </p>
+        </div>
+        <div class="gusto3">
+          <p><span class="bold">Determinado</span></p>
+          <p>
+            Pocas veces abandono las cosas, puedi dejarlas un tiempo pero siempre las terminaré y mejor de como las planeé inicialmente
+          </p>
+        </div>
+      </div>
+      <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
+      <ul>
+        <li class="cositas">Videojuegos</li>
+        <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta.</p>
+        <li class="cositas">Coding</li>
+        <p>Aprendi las cosas basicas de la programacion hace un par de años, ahora solo hao cosas por pura diversion, en juegos o alguna herramienta que se me ocurra</p>
+      </ul>
+      <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
+      <ul class="yt">
+        <li><a href="https://www.youtube.com/">YouTube</a></li>
+      </ul>
+      <p>Utilizo esta aplicacion a diario tanto por propositos de ocio como educativos. Su pagina web utiliza HTML 5 y CSS junto a herramientas de JavaScript</p>
+    </fieldset>
   </main>
   <footer>
-      <p>
-        Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
-      </p>
+    <p>
+      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+    </p>
   </footer>
 </body>
 </html>
