--- a/curriculum.html
+++ b/curriculum.html
@@ -12,11 +12,35 @@
       <p>
         <a class="boton" href="index.html">Pagina Principal</a>
         <a class="selected" href="curriculum.html" target="center">Curriculum</a>
-        <a class="boton" href="personal.html" target="center">Sobre Mi</a>
         <a class="boton" href="formulario.html" target="center">Formulario</a>
+        <a class="boton" href="pagina.html">Sobre el Proyecto</a>
       </p>
     </nav>
   </header>
+  <aside class="personal">
+    <div class="container">
+      <fieldset class="redes">
+        <legend class="center">Redes Sociales</legend>
+        <p>¡Puedes seguirme en mis redes sociales!</p>
+        <a href="https://twitter.com/?lang=es" class="redes">
+          <p><img src="/img/twitter.jpeg" alt="logoTwitter" height="40" width="40"></p>
+          Twitter - X
+        </a>
+        <a href="https://www.instagram.com/" class="redes">
+          <p><img src="/img/intra.png" alt="logoInstagram" height="40" width="40"></p>
+          Instagram       
+        </a>
+        <a href="https://github.com/" class="redes">
+          <p><img src="/img/github.png" alt="logoGitHub" height="40" width="40"></p>
+          GitHub
+        </a>
+        <a href="https://www.reddit.com/" class="redes">
+          <p><img src="/img/reddit.png" alt="logoReddit" height="40" width="40"></p>
+          Reddit
+        </a>
+      </fieldset>
+    </div>
+  </aside>
   <main class="curriculum">
     <fieldset>
       <legend>Curriculum</legend>
