--- a/formulario.html
+++ b/formulario.html
@@ -13,72 +13,76 @@
       <p>
         <a class="boton" href="index.html">Pagina Principal</a>
         <a class="boton" href="curriculum.html" target="center">Curriculum</a>
-        <a class="boton" href="personal.html" target="center">Sobre Mi</a>
         <a class="selected" href="formulario.html" target="center">Formulario</a>
+        <a class="boton" href="pagina.html">Sobre el Proyecto</a>
       </p>
     </nav>
   </header>
+  <aside class="personal">
+    <div class="container">
+      <fieldset class="redes">
+        <legend class="center">Redes Sociales</legend>
+        <p>¡Puedes seguirme en mis redes sociales!</p>
+        <a href="https://twitter.com/?lang=es" class="redes">
+          <p><img src="/img/twitter.jpeg" alt="logoTwitter" height="40" width="40"></p>
+          Twitter - X
+        </a>
+        <a href="" class="redes">
+          <p><img src="/img/intra.png" alt="logoInstagram" height="40" width="40"></p>
+          Instagram       
+        </a>
+        <a href="" class="redes">
+          <p><img src="/img/github.png" alt="logoGitHub" height="40" width="40"></p>
+          GitHub
+        </a>
+        <a href="" class="redes">
+          <p><img src="/img/reddit.png" alt="logoReddit" height="40" width="40"></p>
+          Reddit
+        </a>
+      </fieldset>
+    </div>
+  </aside>
   <main class="formulario">
     <form action="get">
       <fieldset>
-        <legend class="center">Personal</legend>
+        <legend class="center">Solicitar Reunion</legend>
+        <p><label for="nombre">Nombre:* </label></p>
+        <input type="text" id="nombre" required>
+        <p><label for="apellidos">Apellidos:* </label></p>
+        <input type="text" id="apellidos" required>
+        <p><label for="email">Correo Electronico:* </label></p>
+        <input type="email" id="email" required>
+        <p><label for="tel">Nº de Teléfono:</label></p>
+        <input type="tel" id="tel">
+        <p><label for="fecha">Seleccione Fecha para la Reunion:*</label></p>
+        <input type="date" id="fecha" required>
         <p>
-          <label for="nombre">Nombre: </label>
-          <input type="text" id="nombre" required>
-        </p>
-        <p>
-          <label for="apellidos">Apellidos: </label>
-          <input type="text" id="apellidos" required>
-        </p>
-        <p>
-          <label for="edad">Fecha de Nacimiento: </label>
-          <input type="date" id="edad" required>
-        </p>
-        <p>Estado Civil:</p>
-        <p>
-          <label for="casado">Casado: </label>
-          <input type="radio" name="Estado" id="casado" required>
-          <label for="soltero">Soltero: </label>
-          <input type="radio" name="Estado" id="soltero" readonly>
-        </p>
-      </fieldset>
-      <fieldset>
-        <legend class="center">Profesional y Estudios</legend>
-        <p>
-          <label for="estudios">Titulo Academico más alto</label>
-          <select id="estudios" required>
-            <option value="null" selected> </option>
-            <option value="eso">E.S.O.</option>
-            <option value="fpb">F.P. Basica</option>
-            <option value="fpm">F.P. Grado Medio</option>
-            <option value="bach">Bachillerato</option>
-            <option value="fps">F.P. Grado Superior</option>
-            <option value="uni">Carrera Universitaria</option>
-            <option value="master">Master</option>
-            <option value="doctor">Doctorado</option>
+          <label for="motivo">Motivo de la Reunion:*</label>
+          <select id="motivo" required>
+            <option value="null"> </option>
+            <option value="entrevista">Entrevista</option>
+            <option value="duda">Duda sobre producto</option>
+            <option value="prop">Propuesta de Proyecto</option>
+            <option value="problem">Problemas con un producto</option>
+            <option value="other">Otro</option>
           </select>
         </p>
+        <p></p>
         <p>
-          <label for="estudios2">(En caso de FP, Masters o Carreras) Especifique que campo a cursado</label>
-          <input type="text" id="estudios2">
+          <p>Datos extra sobre la Reunion:*</p>
+          <textarea id="meeting" cols="30" rows="10" placeholder="Esriba aqui el motivo de la reunion" required></textarea>
         </p>
         <p>
-          ¿Ha trabajado alguna vez?
-          <p>
-          <label for="trabajadoYes">SI</label>
-          <input type="radio" name="trabajado" id="trabajadoYes" value="true">
-          <label for="trabajadoNo">NO</label>
-          <input type="radio" name="trabajado" id="trabajadoNo" value="false">
-          </p>
+          <label for="terms">Acepta los <a href="https://youtu.be/2Ufge60nqoc">terminos y condiciones de uso</a></label>
+          <input type="checkbox" id="terms" required>
         </p>
         <p>
-          ¿Estas trabajando actualmente?
-          <div>
-            <label for="trabajandoYes">SI</label>
-            <input type="radio" id="trabajandoYes" name="trabajando" value="true">
-            <label for="trabajandoNo">NO</label>
-            <input type="radio" name="trabajando" id="trabajandoNo" value="false">
-          </div>
+          <button type="submit">
+            Enviar
+          </button>
+          <button type="reset">
+            Borrar
+          </button>
         </p>
       </fieldset>
     </form>
