--- a/curriculum.html
+++ b/curriculum.html
@@ -41,7 +41,7 @@
       </fieldset>
     </div>
   </aside>
-  <main class="curriculum">
+  <main id="curriculum">
     <fieldset>
       <legend>Curriculum</legend>
       <table>
@@ -76,10 +76,10 @@
         <tr>
           <th><p>Me considero:</p></th>
           <td>
-            <p>Retarded</p>
-            <p>Deperdicio humano</p>
-            <p>vba enjoyer, que mas he de decir</p>
-            <p>sigo siendo mejor que Jose Caceres Forteza</p>
+            <p>Educado</p>
+            <p>Inteligente</p>
+            <p>Con determinacion</p>
+            <p>Dispuesto a aprender y mejorar</p>
           </td>
         </tr>
       </table>
@@ -87,7 +87,7 @@
   </main>
   <footer>
     <p>
-      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web | Todos los derechos reservados
     </p>
   </footer>
 </body>
