--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </fieldset>
     </div>
   </aside>
-  <main class="personal">
+  <main id="personal">
     <fieldset>
       <legend>BIENVENIDO A MI PAGINA WEB</legend>
-      <img src="img/borrar.jpg" alt="mifoto" height="256" width="256">
+      <img src="img/IMG-20230721-WA0011.jpg" alt="mifoto" class="mifoto">
       <p class="subtitulo">¿QUIEN SOY?</p>
       <p>Marcos Mañanes Ruiz - 18 años (13-07-2005)</p>
       <p>Programador (Java, C#, Python, VBA excepto en Access)</p>
@@ -52,7 +52,7 @@
       <p class="subtitulo">3 CARACTERISTICAS SOBRE MI</p>
       <div class="gustos">
         <div class="gusto1">
-          <p><span class="bold">Simpatico</span></p>
+          <p class="top"><span class="bold">Simpatico</span></p>
           <p>
             Siempre intento ser los mas educado y agradable con la gente. 
           </p>
@@ -86,7 +86,7 @@
   </main>
   <footer>
     <p>
-      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web
+      Marcos Mañanes Ruiz - 2ºSMRC | Aplicaciones Web | Todos los derechos reservados
     </p>
   </footer>
 </body>
