--- a/pagina.html
+++ b/pagina.html
@@ -41,14 +41,23 @@
           </fieldset>
         </div>
       </aside>
-    <main class="pagina">
+    <main id="pagina">
         <fieldset>
-            <div>
-                <ul>
-                    <li><a href="" class="">Video Explicacion</a></li>
-                    <li><a href="" class="">Documentacion</a></li>
-                </ul>
-            </div>
+            <p class="subtitulo">DOCUMENTACION DEL PROYECTO:</p>
+            <ul>
+              <li>
+                <a href="">Documentacion</a>
+              </li>
+            </ul>
+            <p class="subtitulo">VIDEO EXPLICACION DEL PROYECTO:</p>
+            <ul>
+              <li>
+                <a href="">Video</a>
+              </li>
+            </ul>
+            <video controls>
+              <source src="/videos/explicacion_proyeto.mp4">
+            </video>
         </fieldset>
     </main>
     <footer>
