--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main id="personal">
     <fieldset>
       <legend>BIENVENIDO A MI PAGINA WEB</legend>
-      <img src="img/IMG-20230721-WA0011.jpg" alt="mifoto" class="mifoto">
+      <img src="img/mifoto.jpg" alt="mifoto" class="mifoto">
       <p class="subtitulo">¿QUIEN SOY?</p>
       <p>Marcos Mañanes Ruiz - 18 años (13-07-2005)</p>
       <p>Programador (Java, C#, Python, VBA excepto en Access)</p>
