--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
         </div>
       </div>
       <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
-      <ul>
-        <li class="cositas">Videojuegos</li>
-        <p>mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta.</p>
-        <li class="cositas">Coding</li>
-        <p>Aprendi las cosas basicas de la programacion hace un par de años, ahora solo hao cosas por pura diversion, en juegos o alguna herramienta que se me ocurra</p>
+      <ul class="cosas">
+        <li>
+          <span class="cositas">Videojuegos</span>
+          <p>Mis ratos libres casi siempre lo dedico a esto, ya que es algo que me encanta.</p>
+        </li>
+        <li>
+          <span class="cositas">Coding</span>
+          <p>Aprendi las cosas basicas de la programacion hace un par de años, ahora solo hao cosas por pura diversion, en juegos o alguna herramienta que se me ocurra</p>
+        </li>
       </ul>
       <p class="subtitulo">1 APLICACION WEB QUE USO FRECUENTEMENTE</p>
       <ul class="yt">
