--- a/formulario.html
+++ b/formulario.html
@@ -43,7 +43,7 @@
     </div>
   </aside>
   <main id="formulario">
-    <form action="get">
+    <form action="gracias.html">
       <fieldset>
         <legend class="center">Solicitar Reunion</legend>
         <p><label for="nombre">Nombre:* </label></p>
