--- a/index.html
+++ b/index.html
@@ -53,21 +53,15 @@
       <div class="gustos">
         <div class="gusto1">
           <p class="top"><span class="bold">Simpatico</span></p>
-          <p>
-            Siempre intento ser los mas educado y agradable con la gente. 
-          </p>
-        </div>
+          <p>Siempre intento ser los mas educado y agradable con la gente.</p>
+        </div><br>
         <div class="gusto2">
           <p><span class="bold">Introvertido</span></p>
-          <p>
-            Cada vez menos, pero no me suelto facil con gente que apenas conozco
-          </p>
-        </div>
+          <p>Cada vez menos, pero no me suelto facil con gente que apenas conozco</p>
+        </div><br>
         <div class="gusto3">
           <p><span class="bold">Determinado</span></p>
-          <p>
-            Pocas veces abandono las cosas, puedi dejarlas un tiempo pero siempre las terminaré y mejor de como las planeé inicialmente
-          </p>
+          <p>Pocas veces abandono las cosas, puedi dejarlas un tiempo pero siempre las terminaré y mejor de como las planeé inicialmente</p>
         </div>
       </div>
       <p class="subtitulo">2 COSAS QUE NO DEJARIA DE HACER</p>
