--- a/curriculum.html
+++ b/curriculum.html
@@ -83,9 +83,7 @@
           </td>
         </tr>
       </table>
-      <video controls>
-        <source src="video/2023-12-02 11-00-54.mkv">
-      </video>
+      <iframe src="https://mediateca.educa.madrid.org/video/icwlzyg3awvpn7ht/fs" width="420" height="315" frameborder="0" scrolling="no" style="border:0;overflow:hidden" allowfullscreen></iframe>
     </fieldset>  
   </main>
   <footer>
