--- a/curriculum.html
+++ b/curriculum.html
@@ -83,7 +83,9 @@
           </td>
         </tr>
       </table>
-      <iframe src="https://mediateca.educa.madrid.org/video/icwlzyg3awvpn7ht/fs" width="420" height="315" frameborder="0" scrolling="no" style="border:0;overflow:hidden" allowfullscreen></iframe>
+      <video controls>
+        <source src="video/curriclum.mkv">
+      </video>
     </fieldset>  
   </main>
   <footer>
